Fixed alignment of repository link on tablet and desktop

--- a/src/assets/stylesheets/layout/_header.scss
+++ b/src/assets/stylesheets/layout/_header.scss
@@ -199,8 +199,8 @@
     // [tablet landscape +]: Show the reposistory from tablet
     @include break-from-device(tablet landscape) {
       display: block;
-      width: px2rem(230px);
-      max-width: px2rem(230px);
+      width: px2rem(234px);
+      max-width: px2rem(234px);
       padding-right: px2rem(12px);
 
       // Adjust for RTL languages
