--- a/src/assets/stylesheets/layout/_search.scss
+++ b/src/assets/stylesheets/layout/_search.scss
@@ -182,7 +182,7 @@ $md-toggle__search--checked:
     @include break-from-device(tablet landscape) {
       position: relative;
       width: px2rem(230px);
-      margin-right: px2rem(20px);
+      margin-right: px2rem(16px);
       padding: px2rem(2px) 0;
       float: right;
       transition: width 0.25s cubic-bezier(0.1, 0.7, 0.1, 1);
@@ -190,18 +190,18 @@ $md-toggle__search--checked:
       // Adjust for RTL languages
       [dir="rtl"] & {
         margin-right: initial;
-        margin-left: px2rem(20px);
+        margin-left: px2rem(16px);
         float: left;
       }
     }
 
     // [screen +]: Increase spacing of search bar
     @include break-from-device(screen) {
-      margin-right: px2rem(28px);
+      margin-right: px2rem(24px);
 
       // Adjust for RTL languages
       [dir="rtl"] & {
-        margin-left: px2rem(28px);
+        margin-left: px2rem(24px);
       }
     }
 
